fix docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,21 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+
+  # Redis Rate Limiting
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    volumes:
+      - redis_data:/data
+
   # Gateway Service 
   gateway:
     image: ghcr.io/horizon-school-of-digital-technologies/hsurvey_api_gateway:20250828-073746
@@ -129,6 +144,8 @@ services:
       - REACT_APP_API_URL=${REACT_APP_API_URL}
     depends_on:
       - gateway
+    env_file:
+      - .env
 
 volumes:
   postgres_data:
